Revision history for Games-Solitaire-Verify

0.1602  Unknown
        - Convert file input to slurping+splitting.
            - This provides a significant (3m05s instead of over 4m)
            speed boost.
        - Some other optimisations.

0.1601  2015-12-30
        - Fix compatibility with older perls (down to 5.8.9).
            - Several CPAN Tester reports were received.
            - The problem was the /r flag to s///.

0.1600  2015-12-29
        - Alter output to exclude trailing whitespace.
        - Alter input to automatically remove trailing whitespace.
            - These changes are for an upcoming compilation flag in Freecell
            Solver of removing trailing whitespace from output.

0.1500  2015-12-21
        - Remove dependency on MooX::late (and Moo)
        - Some optimizations and cleanups.
        - Removed order prefixes from t/*.t files.

0.1400  2014-11-08
        - Convert to Dist-Zilla
        - Add lib/Games/Solitaire/Verify/App/CmdLine/From_Patsolve.pm and
        convert-patsolve-to-fc-solve-solution
        - Add lib/Games/Solitaire/Verify/Solution/ExpandMultiCardMoves/Lax.pm

0.1300  2014-05-16
        - Some optimizations after noticing that validating the solutions
        of the whole Microsoft Freecell 32K was time consuming.
        - Add examples/benchmark.pl which can be used to benchmark (requires
        the fc-solve distribution in the path).

0.1203  2014-01-30
        - Add LICENSE (as well as COPYING) for CPANTS Kwalitee.
        - Minimum version of perl is 5.8.0 (CPANTS Kwalitee).

0.1202  2013-10-19
        - Update the contact information (it contains an old E-mail.).

0.1201  2013-06-28
        - Add $VERSION to some .pm files that missed it.
            - The PAUSE indexer warned about that.
        - Convert from 'use base' to 'use parent'.

0.1200  2013-06-28
        - Add support for flipped cards to ::Card .
        - Add lib/Games/Solitaire/Verify/KlondikeTalon.pm .