@@ -5,6 +5,10 @@ Revision history for Games-Solitaire-Verify
             - This provides a significant (3m05s instead of over 4m)
             speed boost.
         - Some other optimisations.
+        - Add Games::Solitaire::Verify::Column->append_cards for faster
+        appending.
+        - Add Games::Solitaire::Verify::Column->popN for popping multiple
+        cards from the top.
 
 0.1601  2015-12-30
         - Fix compatibility with older perls (down to 5.8.9).
